# learning-rust

./: .gitignore  README.md
command_line_book/grrs/: .gitignore  Cargo.toml
command_line_book/grrs/src/: main.rs
doug_milford/functions_and_procedures/: Cargo.toml
doug_milford/functions_and_procedures/src/: main.rs
doug_milford/generics/: Cargo.toml
doug_milford/generics/src/: main.rs
doug_milford/lib_vs_main/: Cargo.toml
doug_milford/lib_vs_main/src/: geo_map.rs  lib.rs
doug_milford/lifetimes/: Cargo.toml
doug_milford/lifetimes/src/: main.rs
doug_milford/ownership_and_borrowing/: Cargo.toml
doug_milford/ownership_and_borrowing/src/: main.rs
exercism/leap/.exercism/: metadata.json
exercism/raindrops/.exercism/: metadata.json
exercism/raindrops/src/: lib.rs
jon_gjengset/lifetime_annotations/strsplit/: Cargo.toml
jon_gjengset/roget/: README.md  get_ngrams.py
jon_gjengset/roget/data/: answers.txt  dictionary.txt
jon_gjengset/roget/src/: lib.rs  main.rs
manning_publications/chat-tokio-stream/: Cargo.toml
manning_publications/chat-tokio-stream/src/: main.rs
michael_snoyman/reverse_proxy/: Cargo.toml
michael_snoyman/reverse_proxy/src/: main.rs
microsoft_reactor/moving_beyond_hello_world/kvstore/: Cargo.toml
playground/: Cargo.toml
playground/src/: main.rs
rust_design_patterns/: Cargo.toml
rust_design_patterns/src/: defaults.rs  main.rs  three_vowels.rs
rust_programming_techniques/: iterators.rs  options.rs
tensor_programming/tgit/: .gitignore  Cargo.toml
tensor_programming/tgit/src/: add.rs  commit.rs  error.rs  file.rs  index.rs  init.rs  main.rs  types.rs
traversy_media/rust_sandbox/: Cargo.toml
traversy_media/rust_sandbox/src/: arrays.rs  cli.rs  conditionals.rs  enums.rs  functions.rs  loops.rs  (+9 more)
tsoding/adapter_array/: Cargo.toml
tsoding/rustalik/: Cargo.toml
udemy/building-web-apis-advanced/cr8s/: Cargo.toml  docker-compose.yml  package-lock.json
udemy/building-web-apis-advanced/cr8s/migrations/00000000000000_diesel_initial_setup/: up.sql
udemy/building-web-apis-advanced/cr8s/migrations/2024-05-03-054743_create_rustaceans/: up.sql
udemy/building-web-apis-advanced/cr8s/migrations/2024-05-03-054749_create_crates/: up.sql
udemy/building-web-apis-advanced/cr8s/migrations/2024-05-13-040558_create_users/: up.sql
udemy/building-web-apis-advanced/cr8s/src/: lib.rs  main.rs  models.rs  repositories.rs
udemy/building-web-apis-advanced/cr8s/src/commands/: definitions.rs  handlers.rs  mod.rs
udemy/building-web-apis-advanced/cr8s/src/models/: authorized_users.rs  crates.rs  mod.rs  roles.rs  rustaceans.rs  userroles.rs  users.rs
udemy/building-web-apis-advanced/cr8s/src/repositories/: authorized_users.rs  crates.rs  mod.rs  roles.rs  rustaceans.rs  userroles.rs  users.rs
udemy/building-web-apis-advanced/cr8s/src/routes/: authorizations.rs  crates.rs  mod.rs  rustaceans.rs
udemy/building-web-apis-advanced/cr8s/tests/: rustaceans.rs
udemy/building-web-apis-beginners/rocket-app/: Cargo.toml  database.sqlite
udemy/building-web-apis-beginners/rocket-app/src/: auth.rs  main.rs  models.rs  repositories.rs
udemy/hands-on-systems-programming/pipeviewer/: Cargo.toml  data
udemy/hands-on-systems-programming/pipeviewer/src/: args.rs  main.rs  read.rs  stats.rs  write.rs
udemy/hands-on-systems-programming/pipeviewer/src/stats/: timer.rs
udemy/programming-recipes/d1_filework/: Cargo.toml
udemy/programming-recipes/d1_filework/src/: error.rs  lib.rs  main.rs
udemy/programming-recipes/d1_filework/test_data/: transactions.json
udemy/programming-recipes/d2_iterators/: Cargo.toml
udemy/programming-recipes/d2_iterators/src/: combi.rs  gen_range.rs  intoiter.rs  lib.rs  main.rs
(+68 files in other folders)
