[package]
name = "lib_vs_main"
version = "0.1.0"
authors = ["Gerd Reiss <gerd@reiss.pro>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand = "~0.7" # loads the latest 0.7.x version
rand = { git = "https://github.com/rust-lang-nursery/rand.git" }
# rand = { path = "../../rand" }
inferno = "^0" # loads the latest version up to 1.0.0
# inferno = ">0" # loads the latest version up to 1.0.0

[dev-dependencies]
pretty_assertions = "0.6.1"