[package]
name = "cr8s"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
diesel = { version = "2.1", features = ["chrono"] }
diesel-async = { version = "0.4", features = ["postgres"] }
rocket = { version = "0.5", features = ["json"] }
rocket_db_pools = { version = "0.1", features = ["diesel_postgres"] }
