[package]
name = "d1_filework"
version = "0.1.0"
authors = ["Gerd Reiss <gerd@reiss.pro>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "d1_filework"
path = "src/lib.rs"

[[bin]]
name = "d1_load_trans"
path = "src/main.rs"

[dependencies]
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
failure = "0.1.8 "
failure_derive = "0.1.8"