[package]
name = "d2_iterators"
version = "0.1.0"
authors = ["Gerd Reiss <gerd@reiss.pro>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "d2_iterators"
path = "src/lib.rs"

[[bin]]
name = "d2_printout"
path = "src/main.rs"

[dependencies]
itertools = "0.9.0"
